# jogo-do-mico

./: .dockerignore  .gitignore  .npmrc  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/mobile/: App.tsx  app.json  babel.config.js  metro.config.js  package.json  tsconfig.json
apps/mobile/src/: PlayingCard.tsx  cardArt.ts  gameController.ts  kinds.ts  theme.ts  useLocalGame.ts  useMico.ts
apps/mobile/src/screens/: ConnectScreen.tsx  ConnectingScreen.tsx  GameOverScreen.tsx  GameScreen.tsx  HomeScreen.tsx  LobbyScreen.tsx  RulesScreen.tsx  SoloSetupScreen.tsx
apps/mobile/src/ui/: HandTray.tsx  JungleBackground.tsx  MicoCard.tsx  PlayerSpot.tsx  components.tsx  graphics.tsx  index.ts
infra/: README.md
infra/compose/: docker-compose.yml
infra/docker/: server.Dockerfile
infra/k8s/: deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  service.yaml
infra/swarm/: stack.yml
infra/terraform/: main.tf  outputs.tf  variables.tf
services/server/: package.json
services/server/src/: index.ts
tools/svg-cards/: .gitignore  README.md  animals.py  build.py  cards.py  creatures.py  gen-card-art.js  package.json  rasterize.js  screenshot.js  svg_animals.py
