[package]
name = "jogo-do-mico"
version = "0.0.0"
description = "Jogo do Mico desktop (Tauri shell around the Expo web build)"
edition = "2021"
rust-version = "1.77"

[lib]
name = "jogo_do_mico_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
